<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_1"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <include layout="@layout/include_return"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="@style/use_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <LinearLayout
            style="@style/use_ll">

            <TextView
                style="@style/use_tv"
                android:text="@string/every_day"/>

            <TextView
                android:id="@+id/tv_every_day_num"
                style="@style/use_tv_1"
                android:text="20"/>

        </LinearLayout>


        <LinearLayout
            style="@style/use_ll_2"
            >

            <TextView
                style="@style/use_tv"
                android:text="@string/save"
                />

            <TextView
                android:id="@+id/tv_day_save_num"
                style="@style/use_tv_1"
                android:text="20"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/use_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <LinearLayout
            style="@style/use_ll">

            <TextView
                style="@style/use_tv"
                android:text="@string/every_week"/>

            <TextView
                android:id="@+id/tv_every_week_num"
                style="@style/use_tv_1"
                android:text="20"/>

        </LinearLayout>


        <LinearLayout
            style="@style/use_ll_2"
            >

            <TextView
                style="@style/use_tv"
                android:text="@string/save"
                />

            <TextView
                android:id="@+id/tv_every_week_save_num"
                style="@style/use_tv_1"
                android:text="20"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        style="@style/use_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            style="@style/use_ll">

            <TextView
                style="@style/use_tv"
                android:text="@string/every_month"/>

            <TextView
                android:id="@+id/tv_every_month_num"
                style="@style/use_tv_1"
                android:text="20"/>

        </LinearLayout>


        <LinearLayout
            style="@style/use_ll_2"
            >

            <TextView
                style="@style/use_tv"
                android:text="@string/save"
                />

            <TextView
                android:id="@+id/tv_every_month_save_num"
                style="@style/use_tv_1"
                android:text="20"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        style="@style/use_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            style="@style/use_ll"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            >

            <TextView
                style="@style/use_tv"
                android:text="@string/all_sum_num"/>

            <TextView
                android:id="@+id/tv_count_all_save_sum"
                style="@style/use_tv_1"
                android:text="20"/>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout5"
        style="@style/use_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <include layout="@layout/include_logo_bottom"/>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>